--- a/index.html
+++ b/index.html
@@ -389,14 +389,14 @@
                                 <div class="font-bold text-brand-wine md:text-right">매일 아침</div>
                                 <div class="md:col-span-3">
                                     <p class="font-bold mb-1">[ 기상 직후 ] 기적의 해죽순 칵테일 마시기</p>
-                                    <p class="text-gray-600 mb-2 font-light">해죽순 차 500ml + 초록 1포 + 천일염 듬뿍 타서 10분 이내 호로록!</p>
+                                    <p class="text-gray-600 mb-2 font-light">해죽순 차 500ml + 초록 2포 + 천일염 듬뿍 타서 10분 이내 호로록!</p>
                                     <p class="text-brand-magenta text-xs font-mono tracking-wide">* 공정 원리 : 순식간에 위장 온도 상승! 냉기 OUT!</p>
                                     
                                     <p class="font-bold mt-4 mb-1">[ 아침 식사 ] 일반 식사 🚫</p>
                                     <ul class="list-disc pl-4 text-gray-600 font-light space-y-1">
                                         <li>에너지밀 1포 (해죽순차 조금 + 소금 타서 걸쭉하게)</li>
                                         <li>제이칼슘 2알, 땡큐파워 1포, 시원짱 2포</li>
-                                        <li>생유유산균 1포, 루테인 2알, 비타몬 1포</li>
+                                        <li>생유유산균 1포, 루테인 3알, 비타몬 1포</li>
                                     </ul>
                                     <p class="text-xs text-brand-wine mt-2 italic">* 모든 제품은 해죽순차와 함께 하나씩 입에 털어서 섭취</p>
                                 </div>
@@ -408,7 +408,7 @@
                                     <p class="font-bold mb-1">밥 대신 '에너지밀' 식사</p>
                                     <ul class="list-none text-gray-600 font-light space-y-2">
                                         <li><span class="font-bold text-brand-black">식전 20분 :</span> 인슈케어 2정</li>
-                                        <li><span class="font-bold text-brand-black">식후 즉시 :</span> 제이칼슘 2알, 생유유산균 1포, 내몸에 초록 1포, 루테인 2알, 비타몬 2포</li>
+                                        <li><span class="font-bold text-brand-black">식후 즉시 :</span> 제이칼슘 2알, 생유유산균 1포, 내몸에 초록 2포, 루테인 3알, 비타몬 2포</li>
                                     </ul>
                                 </div>
                             </div>
@@ -419,7 +419,7 @@
                                     <p class="font-bold mb-1">반찬 식사 + 에너지밀 1포</p>
                                     <ul class="list-none text-gray-600 font-light space-y-2">
                                         <li><span class="font-bold text-brand-black">식전 20분 :</span> 인슈케어 2정</li>
-                                        <li><span class="font-bold text-brand-black">식후 즉시 :</span> 제이칼슘 2알, 땡큐파워 1포, 시원짱 2포, 생유유산균 1포, 내몸에 초록 1포, 루테인 2알, 비타몬 2포</li>
+                                        <li><span class="font-bold text-brand-black">식후 즉시 :</span> 제이칼슘 2알, 땡큐파워 1포, 시원짱 2포, 생유유산균 1포, 내몸에 초록 2포, 루테인 3알, 비타몬 2포</li>
                                     </ul>
                                     <p class="text-xs text-brand-wine mt-3 font-mono">* NOTE: 첫날 저녁 잠이 안 올 경우, '내 몸에 초록'은 늦은 저녁을 피해 오후 복용 권장.</p>
                                 </div>
@@ -441,14 +441,14 @@
                                 <div class="font-bold text-brand-wine md:text-right">매일 아침</div>
                                 <div class="md:col-span-3">
                                     <p class="font-bold mb-1">[ 기상 직후 ] 숨클린이 추가된 해죽순 칵테일!</p>
-                                    <p class="text-gray-600 mb-2 font-light">해죽순 차 500ml + 초록 1포 + <strong class="text-brand-magenta">숨클린 1포</strong> + 천일염 듬뿍</p>
+                                    <p class="text-gray-600 mb-2 font-light">해죽순 차 500ml + 초록 2포 + <strong class="text-brand-magenta">숨클린 1포</strong> + 천일염 듬뿍</p>
                                     <p class="text-brand-magenta text-xs font-mono tracking-wide">* 공정 원리 : 임파관 깊은 곳까지 순환 준비!</p>
                                     
                                     <p class="font-bold mt-4 mb-1">[ 아침 식사 ] 일반 식사 🚫</p>
                                     <ul class="list-disc pl-4 text-gray-600 font-light space-y-1">
                                         <li>에너지밀 1포 (죽처럼 제조)</li>
                                         <li>제이칼슘 2알, 땡큐파워 1포</li>
-                                        <li>생유유산균 1포, 루테인 2알, 비타몬 1포</li>
+                                        <li>생유유산균 1포, 루테인 3알, 비타몬 2포</li>
                                     </ul>
                                 </div>
                             </div>
@@ -458,8 +458,8 @@
                                 <div class="md:col-span-3">
                                     <p class="font-bold text-brand-magenta mb-2">[ 일반 식사 🚫 ]</p>
                                     <ul class="list-none text-gray-600 font-light space-y-1">
-                                        <li>에너지밀 1포, 인슈케어 2정</li>
-                                        <li>제이칼슘 2알, 생유유산균 1포, 내몸에 초록 1포, 루테인 2알, 비타몬 2포</li>
+                                        <li>에너지밀 1포, 인슈케어 2정, 숨클린 1포</li>
+                                        <li>제이칼슘 2알, 생유유산균 1포, 내몸에 초록 2포, 루테인 3알, 비타몬 2포</li>
                                     </ul>
                                 </div>
                             </div>
@@ -470,7 +470,7 @@
                                     <p class="font-bold text-brand-magenta mb-2">[ 일반 식사 🚫 ]</p>
                                     <ul class="list-none text-gray-600 font-light space-y-1">
                                         <li>에너지밀 1포, 인슈케어 2정</li>
-                                        <li>제이칼슘 2알, 땡큐파워 1포, 시원짱 2포, 생유유산균 1포, 내몸에 초록 1포, 루테인 2알, 비타몬 2포</li>
+                                        <li>제이칼슘 2알, 땡큐파워 1포, 시원짱 2포, 생유유산균 1포, 내몸에 초록 2포, 루테인 3알, 비타몬 2포</li>
                                     </ul>
                                 </div>
                             </div>
